 -- In sched/wiki and sched/wiki2, add support for wiki.conf option
    HidePartitionJobs (see man pages for details).
 -- Update to srun/sbatch --get-user-env option logic (needed by Moab).
 -- In slurmctld (for Moab) added job->details->reserved_resources field
    to report resources that were kept in reserve for job while it was 
    pending.

* Changes in SLURM 1.2.21
=========================
 -- Fixed torque wrappers to look in the correct spot for the perl api
 -- Do not treat user resetting his time limit to the current value as
    an error.
 -- Set correct executable names for Totalview when --multi-prog option 
    is used and more than one node is allocated to the job step.
 -- When a batch job gets requeued, record in accounting logs that 
    the job was cancelled, the requeued job's submit time will be 
    set to the time of its requeue so it looks like a different job.
 -- Prevent communication problems if the slurmd/slurmstepd have a 
    different JobAcct plugin configured than slurmctld.
 -- Adding Gold plugin for job accounting
 -- In sched/wiki2, add support for MODIFYJOB option "JOBNAME=<name>"
    to modify a job's name.
 -- Add configuration check for sys/syslog.h and include it as needed.
 -- Add --propagate option to sbatch for control over limit propagation.
 -- Added Gold interface to the jobacct plugin.  To configure in the config
    file specify...  
    JobAcctType=jobacct/gold
    JobAcctLogFile=CLUSTER_NAME:GOLD_AUTH_KEY_FILE:GOLDD_HOST:GOLDD_PORT7112
 -- In slurmctld job record, set begin_time to time when all of a job's
    dependencies are met.

* Changes in SLURM 1.2.20
=========================
 -- In switch/federation, fix small memory leak effecting slurmd.
 -- Add PMI_FANOUT_OFF_HOST environment variable to control how message 
    forwarding is done for PMI (MPICH2). See "man srun" for details.
 -- From sbatch set SLURM_NTASKS_PER_NODE when --ntasks-per-node option is 
    specified.